Fix letter spacing that was used in previous versions

--- a/assets/style.css
+++ b/assets/style.css
@@ -259,7 +259,6 @@ footer li {
 }
 
 .music {
-    letter-spacing: 1.5px;
     word-spacing: -1px;
     width: 97%;
     max-width: 350px;
